--- a/index.html
+++ b/index.html
@@ -3,47 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/styles.css">
   
-  <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
+  <title> Interactive rating component</title>
+ </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
+<header>
+  <nav>
+    <h1>How did we do?
+    </h1>
+  </nav>
+</header>
+<section>
+  <h2> Please let us know how we did with your support request. All feedback is appreciated 
+    to help us improve our offering!</h2>
+  <div class="rating">
+    <input type="radio" id="rating-1" name="rating" value="1
+    "><label for="rating-1">1</label>
+    <input type="radio" id="rating-2" name="rating" value="2
+    "><label for="rating-2">2</label>
+    <input type="radio" id="rating-3" name="rating" value="3
+    "><label for="rating-3">3</label>
+    <input type="radio" id="rating-4" name="rating" value="4
+    "><label for="rating-4">4</label>
+    <input type="radio" id="rating-5" name="rating" value="5  
+    "><label for="rating-5">5</label>
+    </div>
+    <button> Submit</button>
+  </div>
+</section>
+<section>
+  <div class="feedback">
+    <p>You selected {} out of 5</p>
+    <h3> Thank you!</h3>
+    <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+      don’t hesitate to get in touch!</p>
+    </div>
+  </div>
+</section>
+<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Peris Ndanu</a>.
   </div>
 </body>
 </html>
