Added a star icon on navigation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/styles.css">
   
@@ -14,6 +11,7 @@
 <body>
 <header>
   <nav>
+    <img src="./images/icon-star.svg" alt="a star icon"/>
     <h1>How did we do?
     </h1>
   </nav>
