--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title> Interactive rating component</title>
  </head>
 <body>
-<header>
-  <nav>
-    <img src="./images/icon-star.svg" alt="a star icon"/>
+  <main>
+
+<section class="rating-section">
+  <img src="./images/icon-star.svg" class="star-icon" alt="a star icon" />
     <h1>How did we do?
     </h1>
-  </nav>
-</header>
-<section>
-  <h2> Please let us know how we did with your support request. All feedback is appreciated 
-    to help us improve our offering!</h2>
+  <p class="feedback-request"> Please let us know how we did with your support request. All feedback is appreciated 
+    to help us improve our offering!</p>
   <div class="rating">
     <input type="radio" id="rating-1" name="rating" value="1
     "><label for="rating-1">1</label>
@@ -34,7 +35,7 @@
     <button> Submit</button>
   </div>
 </section>
-<section>
+<!-- <section>
   <div class="feedback">
     <p>You selected {} out of 5</p>
     <h3> Thank you!</h3>
@@ -42,10 +43,11 @@
       don’t hesitate to get in touch!</p>
     </div>
   </div>
-</section>
-<div class="attribution">
+</section> -->
+<!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Peris Ndanu</a>.
-  </div>
+  </div> -->
+  </main>
 </body>
 </html>
